# evennia-minimud

./: .gitignore  LICENSE  README.md  pyproject.toml
commands/: account.py  combat.py  default_cmdsets.py  interact.py  shops.py  skills.py
server/conf/: settings.py
typeclasses/: accounts.py  characters.py  exits.py  gear.py  objects.py  rooms.py  scripts.py  weapons.py
typeclasses/tests/: test_characters.py
web/templates/website/: index.html
world/: chargen_menu.py  initial_build.ev  prototypes.py
world/maps/: overworld.py  starter_town.py
world/recipes/: base.py  carving.py  cooking.py  leathercraft.py  smithing.py
world/recipes/tests/: test_smithing.py
