[project]
name = "evennia-minimud"
version = "1.1.2"
requires-python = ">=3.10"
authors = [
    {name = "InspectorCaracal"}
]
dependencies = [
    # General
    "evennia[extra] >= 4.2, <5.0",
    'pywin32; sys_platform=="win32"',
]

[tool.setuptools]
py-modules = []

[project.urls]
repository = "https://github.com/InspectorCaracal/evennia-minimud"
